--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="marshi.app.App"
+        android:name="marshi.memo.app.App"
         android:theme="@style/AppTheme">
-        <activity android:name="marshi.app.feature.home.MainActivity">
+        <activity android:name="marshi.memo.app.feature.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
