--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name="marshi.memo.app.App"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MaterialComponents.Light">
         <activity android:name="marshi.memo.app.feature.home.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
