--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,6 +6,10 @@ plugins {
     id 'kotlin-kapt'
 }
 
+repositories {
+    mavenCentral()
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
