--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation project(':core')
 
     implementation Dep.kotlin
+//    implementation Dep.kotlinCoroutinesAndroid
     implementation Dep.coreKtx
     implementation Dep.appCompat
     implementation Dep.constraintLayout
@@ -53,6 +54,10 @@ dependencies {
     // dagger
     implementation Dep.daggerAndroid
     implementation Dep.daggerAndroidSupport
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt Dep.daggerCompiler
     kapt Dep.daggerAndroidProcessor
     implementation Dep.hiltLifecycleViewModel
@@ -60,6 +65,11 @@ dependencies {
 
     implementation Dep.groupie
     implementation Dep.groupieViewBinding
+
+    implementation Dep.navigationFragment
+    implementation Dep.navigationFragmentKtx
+    implementation Dep.navigationUi
+    implementation Dep.navigationUiKtx
 
     testImplementation Dep.junit4
     androidTestImplementation Dep.androidxJunit
