--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation project(":data")
+    implementation project(":data:db")
     implementation project(":core")
     implementation project(":feature:home")
 
