--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,10 +46,11 @@ dependencies {
     implementation Dep.appCompat
     implementation Dep.material
 
-    implementation Dep.daggerAndroid
-    implementation Dep.daggerAndroidSupport
-    kapt Dep.daggerCompiler
-    kapt Dep.daggerAndroidProcessor
+    // dagger
+    implementation Dep.daggerHiltLifecycleViewModel
+    kapt Dep.daggerHiltCompiler
+    implementation Dep.daggerHiltAndroid
+    kapt Dep.daggerHiltAndroidCompiler
 
     testImplementation Dep.junit4
     androidTestImplementation Dep.androidxJunit
