--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation project(":data:repository")
     implementation project(":data:db")
     implementation project(":core")
     implementation project(":feature:home")
