--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name='AndroidTemplate'
 
 include ':data:db'
+include ':data:repository'
 include ':core'
 include ':feature:home'
 include ':app'
