--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "marshi.memo"
+        applicationId "dev.marshi.memo"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
